src/main/java/com/example/storeprojectstep1/errors/exception/Exception403.java
package com.example.storeprojectstep1.errors.exception;

public class Exception403 extends RuntimeException {
    public Exception403(String msg) {
        super(msg);
    }
}
